# cmakelists_study

hello_multifile/: CMakeLists.txt
hello_multifile/source/: hello.cpp  main.cpp
hello_singlefile/: CMakeLists.txt
hello_singlefile/source/: main.cpp
