#==========================================================
#project名称
project(HELLO)

#==========================================================
#这一步会把需要编译的源文件添加在SRC_LIST表中
set(SRC_LIST source/hello.cpp source/main.cpp)

    #==========================================================
    #写法1：单独添加文件
    #set(SRC_LIST source/hello.cpp source/main.cpp)
    
	#==========================================================
    #写法2:把指定文件夹下所有文件都添加进来(这里是source)
    #aux_source_directory(source SRC_LIST)

    #==========================================================
    #写法3:把当前文件夹下所有文件都添加进来
    #aux_source_directory(. SRC_LIST)

#==========================================================
#把SRC_LIST中所有源代码生成一个叫hello的可执行文件
add_executable(hello ${SRC_LIST})
